--- a/helm_charts/mdss/templates/deployments-template.yml
+++ b/helm_charts/mdss/templates/deployments-template.yml
@@ -2,6 +2,16 @@
 # Create a deployment for each component in MDSS
 {{ range $component_name, $component := .Values.mdss_components }}
 
+# If the component name is not defined, set it to the component name
+{{- if or (ne defined $component.name) (eq $component.name "") }}
+{{- $component.name := $component_name }}
+{{- end }}
+
+# If the image tag is not defined, set it to latest
+{{ if or (ne defined $component.image_tag) (eq $component.image_tag "") }}
+{{ $component.image_tag = "latest" }}
+{{ end }}
+
 {{ if and (or $.Values.deploy_with_mdss_db (not $component.is_db)) ( or (not $component.module_name) (contains (print $component.module_name) (index $.Values "mdss-common-environment").ENABLED_MODULES))  }}
 ---
 apiVersion: apps/v1
@@ -9,7 +19,7 @@ kind: Deployment
 metadata:
   name: {{ $component.name | quote }}
 spec:
-  replicas: {{ $component.replicas }}
+  replicas: {{ $component.replicas | default 1}}
   selector:
     matchLabels:
       app: {{ $component.name | quote }}
@@ -30,9 +40,9 @@ spec:
             - configMapRef:
                 name: {{ $.Values.mdss_config_map_env_name | quote }}
           {{ if $component.custom_repo -}}
-          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image (index $.Values "mdss-common-environment").BRANCH | quote }}
+          image: {{ printf "%s/%s:%s" $.Values.mdss_docker_repo $component.image $component.image_tag | quote }}
           {{- else -}}
-          image: {{ $component.image | quote }}
+          image: {{ printf "%s:%s" $component.image $component.image_tag | quote }}
           {{- end }}
           imagePullPolicy: {{ $.Values.imagePullPolicy }}
           {{- if $component.env }}
