--- a/helm_charts/mdssc/templates/services-template.yml
+++ b/helm_charts/mdssc/templates/services-template.yml
@@ -2,6 +2,11 @@
 {{ range $component_name, $component := .Values.mdssc_components }}
 {{ if and $component.ports ( or (not $component.module_name) (contains (print $component.module_name) (index $.Values "mdssc-common-environment").ENABLED_MODULES)) }}
 
+# If the component name is not defined, set it to the component name
+{{- if or (ne defined $component.name) (eq $component.name "") }}
+{{- $component.name := $component_name }}
+{{- end }}
+
 {{ if and (not $.Values.deploy_with_mdssc_db) $component.is_db }}
 
 {{ else }}
