--- a/helm_charts/mdcore/templates/secrets-template.yml
+++ b/helm_charts/mdcore/templates/secrets-template.yml
@@ -19,6 +19,8 @@
 {{- $postgresUserValue = .Values.db_user | b64enc }}
 {{- end }}
 
+
+{{- if .Values.createSecrets.db }}
 ---
 kind: Secret
 apiVersion: v1
@@ -29,7 +31,7 @@ metadata:
 data:
   user: {{ $postgresUserValue }}
   password: {{ $postgresPasswordValue }}
-
+{{- end }}
 ---
 
 # Generate, set or keep the MD Core credentials
@@ -50,6 +52,7 @@ data:
 {{- $coreUserValue = .Values.mdcore_user | b64enc }}
 {{- end }}
 
+{{- if .Values.createSecrets.mdcore }}
 ---
 kind: Secret
 apiVersion: v1
@@ -60,6 +63,8 @@ metadata:
 data:
   user: {{ $coreUserValue }}
   password: {{ $corePasswordValue }}
+
+{{- end }}
 
 # Generate, set or keep the MD Core API key
 {{- $coreApiKeyValue := (randNumeric 36) | b64enc | quote }}
@@ -96,6 +101,7 @@ data:
 {{- $coreLicenseKeyValue = .Values.mdcore_license_key | b64enc }}
 {{- end }}
 
+{{- if .Values.createSecrets.mdcore_license_key }}
 ---
 kind: Secret
 apiVersion: v1
@@ -106,6 +112,7 @@ metadata:
 data:
   value: {{ $coreLicenseKeyValue }}
 
+{{- end }}
 
 {{ if .Values.additional_secrets }}
   {{ range $secret_name, $secret_data := .Values.additional_secrets }}
